# cuda-path-tracer

./: .gitignore  CMakeLists.txt  README.md  finalKernel.cu  report.html
cuda/: .gitignore  CMakeLists.txt  CudaRender.cpp  CudaRender.h  MainWindow.cpp  MainWindow.h  README.txt  ShaderProgramm.cpp  ShaderProgramm.h  filter.cc.cu  glad.c  main.cpp  renderScenes.sh  renderer.cc.cu  renderer.h
cuda/include/: tinyformat.h
cuda/include/glad/: glad.h
cuda/include/nori/: arealight.h  bbox.h  bsdf.h  bumpMap.h  bvh.h  camera.h  color.h  common.h  consttexture.h  dielectric.h  diffuse.h  dpdf.h  emitter.h  enviromentmap.h  frame.h  imagetexture.h  independent.h  integrator.h  mesh.h  normalMap.h  normalModifier.h  object.h  pathMisIntegrator.h  perspective.h  ray.h  scene.h  shape.h  sphere.h  spheremap.h  subsurface.h  texture.h  transform.h  vector.h  warp.h
cuda/nori/: arealight.cpp.cu  bumpMap.cpp.cu  bvh.cpp.cu  common.cpp.cu  consttexture.cpp  dielectric.cpp.cu  diffuse.cpp.cu  imagetexture.cpp.cu  independent.cpp.cu  mesh.cpp.cu  normalMap.cpp.cu  obj.cpp  object.cpp  parser.cpp  pathMisIntegrator.cpp.cu  perspective.cpp.cu  scene.cpp  shape.cpp  sphere.cpp.cu  spheremap.cpp.cu  subsurface.cpp.cu  warp.cpp.cu
include/nori/: bsdf.h  bvh.h  normalModifier.h  object.h  scene.h  shape.h  warp.h
scenes/pa4/cbox/: cbox_path_mis.xml  cbox_sphere.xml
scenes/pa4/clocks/: clocks_light.xml
scenes/pa4/table/: table_path_mis.xml
scenes/proj/: .final.xml.swo  ajax-ss.xml  ajax-ss2.xml  ajax-ss3.xml  ajax-ss4.xml  bump.xml  cbox_subsurface.xml  dragon-diffuse.xml  dragon-ss.xml  env.xml  filter.xml  final.xml  finalCPU.xml  finalMountainTrees.xml  hut.xml  normal.xml  odyssey_ss.xml  snow.xml  sphere-ss.xml  texture.xml  textureAndBump.xml  tree.xml  trees.xml
scenes/proj/meshes/: hütte.c4d  schnee_Farbe_1.tif  schneespuren_Displacement_1.tif  schneespuren_Farbe_1.tif
scenes/proj/meshes/final/: doors.mtl  hut.mtl  metal.mtl  mountain_tree_trunk.mtl  roof.mtl  snow.mtl  snow_debug.mtl  tree_nails.mtl  tree_snow.mtl
src/: arealight.cpp  averageVisibility.cpp  block.cpp  bumpMap.cpp  bvh.cpp  checkerboard.cpp  chi2test.cpp  dielectric.cpp  diffuse.cpp  directEMSIntegrator.cpp  directIntegrator.cpp  directMatsIntegrator.cpp  directMisIntegrator.cpp  imagetexture.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  parser.cpp  pathMatsIntegrator.cpp  pathMisIntegrator.cpp  photonmapper.cpp  pointLight.cpp  render.cpp  rfilter.cpp  shape.cpp  sphere.cpp  subsurface.cpp  ttest.cpp  warp.cpp  warptest.cpp
